# riot-cpp

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  dir-structure.txt  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: build.yml  ci.yaml
Contributing/: contributing.html
Endpoints/: Account.html  Leagends_of_Runeterra.html  Valorant.html
Endpoints/League_of_Legends/: Challenges.html  Champion.html  Champion_Mastery.html  Clash.html  League.html  Match.html  Spectator.html  Status.html  Summoner.html
Endpoints/Teamfight_Tactics/: League.html  Match.html  Status.html  Summoner.html
Getting Started/: installation.html  usage.html
Implementation/: endpoints.html  handlers.html  logging.html
docs/: endpoints.md  handlers.md  index.md  installation.md  logging.md
docs/Contributing/: contributing.md
docs/Endpoints/: Account.md  Leagends_of_Runeterra.md  Valorant.md
docs/Endpoints/League_of_Legends/: Challenges.md  Champion.md  Champion_Mastery.md  Clash.md  League.md  Match.md  Spectator.md  Status.md  Summoner.md
docs/Endpoints/Teamfight_Tactics/: League.md  Match.md  Status.md  Summoner.md
docs/Getting Started/: usage.md
docs/Implementation/: endpoints.md
site/: sitemap.xml
site/Contributing/: contributing.html
site/Getting Started/: installation.html
site/Implementation/: logging.html
src/: CMakeLists.txt  auto_encoder.cpp  auto_encoder.h  client.cpp  client.h  player.cpp  player.h  query.cpp  query.h  query_type.cpp  query_type.h  response_codes.cpp  test  version
src/client/: client.cpp  client.h
src/handling/: handlers.cpp  handlers.h  rate_limiting.cpp  rate_limiting.h  response_codes.cpp
src/handling/structures/: rate_structures.h  request_history.cpp
src/logging/: logger.cpp  logger.h
src/queries/: ACCOUNT_V1.cpp  CLASH_V1.cpp  LEAGUE_V4.cpp  MATCH_V5.cpp  SUMMONER_V4.cpp
src/queries/LOL/: CHALLENGES_V1.cpp  CHAMPION_MASTERY_V4.cpp  CHAMPION_V3.cpp  CLASH_V1.cpp  LEAGUE_EXP_V4.cpp  LEAGUE_V4.cpp  MATCH_V5.cpp  SPECTATOR_V4.cpp  STATUS.cpp  SUMMONER_V4.cpp
src/queries/LOR/: MATCH_V1.cpp  RANKED_V1.cpp
src/queries/TFT/: TFT_LEAGUE_V1.cpp  TFT_MATCH_V1.cpp  TFT_SUMMONER_V1.cpp
src/queries/VAL/: CONTENT_V1.cpp  MATCH_V1.cpp
src/query/: query.cpp  query.h  query_type.cpp  query_type.h
src/riot-cpp/: CMakeLists.txt
src/riot-cpp/client/: client.cpp  client.h
src/riot-cpp/handling/: handlers.cpp  handlers.h  rate_handler.cpp  rate_handler.h  rate_hierachy.cpp  rate_hierachy.h  region_count.cpp  region_count.h  region_enums.cpp  region_enums.h  scope_count.h
src/riot-cpp/handling/structures/: rate_structures.h  request_history.cpp
src/riot-cpp/logging/: logger.cpp  logger.h
src/riot-cpp/query/: endpoints.h  query.cpp  query.h  url.h
src/riot-cpp/types/: args.h  region_enums.cpp
test/: Rate_Tests.cpp  benchmark_client.cpp  client_tests.cpp  log_file.txt  routing_utils_test.cpp  test_log.txt  type_tests.cpp  url_tests.cpp
